--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>
       Professional Photo Retouching Service Provider in Aberdeen, SD
     </title>
-
+    <meta
+      name="google-site-verification"
+      content="hMYaJgyOzOeVUHHXGw7G92hP_-q4O8egAZwNnkhoCTY"
+    />
     <meta
       name="description"
       content="Looking for professional photo retouching services in Aberdeen, SD? Get high-quality edits, fast turnaround, and flawless results from expert retouchers."
